# rookworld-rlvr

./: .gitignore  CLAUDE.md  GRPO_BEST_PRACTICES_IMPLEMENTATION.md  IMPLEMENTATION_PARITY_ANALYSIS.md  KL_DIVERGENCE_INVESTIGATION.md  MAIN_TRAINING_VERIFICATION_RESULTS.md  MEMORY_LEAK_INVESTIGATION.md  README.md  ROOKWORLD_ANALYSIS.md  ROOKWORLD_DATASET_INTEGRATION.md  STABILITY_IMPROVEMENTS_SUMMARY.md  TEST_SCRIPT_ANALYSIS.md  TRAINING_IMPROVEMENTS_INSIGHTS.md  analyze_partial_results.py  analyze_sweep_results.py  calculate_optimal_batch.py  deep_analysis_results.json  deep_mixed_evaluation_metrics.json  github_issue_resolution_report.md  hyperparameter_sweep.sh  overfitting_metrics.json  pyproject.toml  run_single_batch_test.py  test_default_config_performance.py  test_improved_training.py  test_overfitting.py  test_performance.py  test_single_batch.sh  test_train.sh  train.sh  train_rookworld_grpo.py  train_transformers_grpo.py
configs/: README.md
docs/: ARCHITECTURE.md  CRITICAL_INSIGHTS.md  KL_DIVERGENCE_INVESTIGATION.md  hardening_plan_refined.md  implementation_status.md  kpi.md  performance_optimizations.md
hyperparameter_results_20250826_075034/: results.csv
hyperparameter_results_20250826_080727/: results.csv
hyperparameter_results_20250826_105724/: results.csv
hyperparameter_results_20250826_105947/: results.csv
hyperparameter_results_20250826_133957/: results.csv
logs/: grpo_training_20250829_050537_results.json  grpo_training_20250829_051158_results.json  grpo_training_20250829_064000_results.json  grpo_training_20250829_064458_results.json  grpo_training_20250829_105500_results.json  grpo_training_20250829_111137_results.json  grpo_training_20250829_142959_results.json  grpo_training_20250829_143422_results.json  grpo_training_20250829_145044_results.json  grpo_training_20250829_154228_results.json  training_history.jsonl
logs_bf16/: grpo_training_20250829_105648_results.json  training_history.jsonl
logs_bf16_optimized/: grpo_training_20250829_110933_results.json  training_history.jsonl
logs_quality_test_1756477937/: grpo_training_20250829_143218_results.json  training_history.jsonl
rookworld/: __init__.py
scripts/: CODEBASE_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  GRPO_BEST_PRACTICES.md  HUGGINGFACE_WEIGHTS_TEST_SUMMARY.md  IMPLEMENTATION_PLAN.md  MIXED_TASK_TRAINING_FINDINGS.md  README_train_full_grpo.md  analyze_final_metrics.py  analyze_lean_log.py  analyze_metrics.py  calculate_memory_usage.py  compare_reward_systems.py  conservative_training_test.py  debug_grpo_loss.py  debug_memory.py  (+39 more)
(+141 files in other folders)
