[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rookworld_rlvr"]

[project]
name = "rookworld-rlvr"
version = "0.1.0"
description = ""
authors = [
    {name = "jrahn", email = "jrahn@example.com"},
]
dependencies = [
    "torch>=2.0",
    "chess",
    "tiktoken",
    "safetensors",
    "numpy",
    "huggingface-hub>=0.34.4",
    "datasets>=3.1.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
